--- a/documentation/edit-settings/index.html
+++ b/documentation/edit-settings/index.html
@@ -20,6 +20,7 @@
                     <a class="selected" href="edit-settings/"><li>Edit Settings</li></a>
                     <a href="frames-panel/"><li>Frames Panel</li></a>
                     <a href="wave-bank/"><li>Wave Bank</li></a>
+                    <a href="wave-editor/"><li>Wave Editor</li></a>
                     <a href="instrument-bank/"><li>Instrument Bank</li></a>
                     <a href="instrument-editor/"><li>Instrument Editor</li></a>
                     <a href="pattern-editor/"><li>Pattern Editor</li></a>
