--- a/documentation/instrument-bank/index.html
+++ b/documentation/instrument-bank/index.html
@@ -20,6 +20,7 @@
                     <a href="edit-settings/"><li>Edit Settings</li></a>
                     <a href="frames-panel/"><li>Frames Panel</li></a>
                     <a href="wave-bank/"><li>Wave Bank</li></a>
+                    <a href="wave-editor/"><li>Wave Editor</li></a>
                     <a class="selected" href="instrument-bank/"><li>Instrument Bank</li></a>
                     <a href="instrument-editor/"><li>Instrument Editor</li></a>
                     <a href="pattern-editor/"><li>Pattern Editor</li></a>
@@ -54,11 +55,18 @@
                     </tr>
                     <tr>
                         <td>New wave instrument</td>
-                        <td>Creates a new wave instrument.</td>
+                        <td>Creates a new wave instrument. These play and manipulate waves from the wave bank.</td>
+                    </tr>
+                    <tr>
+                        <td>New noise instrument</td>
+                        <td>
+                            Creates a new noise instrument. These play and manipulate white noise, which is useful for
+                            making simple chiptune percussion.
+                        </td>
                     </tr>
                     <tr>
                         <td>New sample instrument</td>
-                        <td>Creates a new sample instrument.</td>
+                        <td>Creates a new sample instrument. These play an audio clip.</td>
                     </tr>
                     <tr>
                         <td>Remove instrument</td>
@@ -91,7 +99,7 @@
                     </tr>
                     <tr>
                         <td>Rename</td>
-                        <td>Opens a prompt to rename the currently selected instrument.</td>
+                        <td>Allows you to rename the currently selected instrument.</td>
                     </tr>
                 </table>
                 <br />
