--- a/documentation/index.html
+++ b/documentation/index.html
@@ -18,7 +18,9 @@
                     <a href="module-panel/"><li>Module Panel</li></a>
                     <a href="edit-settings/"><li>Edit Settings</li></a>
                     <a href="frames-panel/"><li>Frames Panel</li></a>
-                    <a href="wave-bank/"><li>Wave Bank</li></a>
+                    <a href="wave-bank/"><li>Wave Bank</li></a
+                    ><a href="wave-editor/"><li>Wave Editor</li></a>
+
                     <a href="instrument-bank/"><li>Instrument Bank</li></a>
                     <a href="instrument-editor/"><li>Instrument Editor</li></a>
                     <a href="pattern-editor/"><li>Pattern Editor</li></a>
